フロー画像修正

--- a/jigyou.html
+++ b/jigyou.html
@@ -117,7 +117,7 @@
             </div>
             <div class="flow_img">
                 <img class="pc_img" src="img/kiwami_flow_20230223.png" alt="">
-                <img class="mob_img" src="img/kiwami_flow_photo.001.png" alt="">
+                <img class="mob_img" src="img/kiwami_flow_20230502.png" alt="">
             </div>
         </section>
         <footer class="footer04">
