ホームぺージタイトル変更

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/load.css">
-        <title>practice</title>
+        <title>株式会社極美_ホームページ</title>
     </head>
     <body>
         <div id="loader">
