--- a/jigyou.html
+++ b/jigyou.html
@@ -59,17 +59,20 @@
                 <div class="job_content1 job_con">
                     <h1><a href="#area-1">屋根塗装</a></h1>
                 </div>
-                <div class="job_content2 job_con">
-                    <h1><a href="#area-2">各種吹付塗装</a></h1>
+                <div href="#area-2" class="job_content2 job_con">
+                    <h1><a href="#area-2">外壁塗装</a></h1>
                 </div>
                 <div class="job_content3 job_con">
-                    <h1><a href="#area-3">コーチング工事</a></h1>
+                    <h1><a href="#area-3">各種吹付塗装</a></h1>
                 </div>
                 <div class="job_content4 job_con">
-                    <h1><a href="#area-4">基礎工事</a></h1>
+                    <h1><a href="#area-4">コーチング工事</a></h1>
                 </div>
-                <div href="#area-5" class="job_content5 job_con">
-                    <h1><a href="#area-5">防水工事</a></h1>
+                <div class="job_content5 job_con">
+                    <h1><a href="#area-5">基礎工事</a></h1>
+                </div>
+                <div href="#area-6" class="job_content6 job_con">
+                    <h1><a href="#area-6">防水工事</a></h1>
                 </div>
             </div>
             <div class="jigyou_syousai">
@@ -83,18 +86,25 @@
                 <div class="job_syousai2 job_syo" id="area-2">
                     <img src="img/home2.webp" alt="">
                     <div class="job_setumei">
+                        <h1>外壁塗装</h1>
+                        <p>遮熱効果が向上する・断熱性が高くなる・防水効果が向上する・抗菌性が高くなる・外観が美しくなる 屋根の塗膜が剥がれていたり、色あせやサビが生じている、ひび割れが起きている場合などに最適な屋根塗装をご提案します。</p>
+                    </div>
+                </div>
+                <div class="job_syousai3 job_syo" id="area-3">
+                    <img src="img/home2.webp" alt="">
+                    <div class="job_setumei">
                         <h1>各種吹付塗装</h1>
                         <p>塗膜の品質を均一にでき、より多くの膜厚をつけやすい工法でもあるので、仕上がりがきれいになります。当社は高い技術力のある職人が在籍しているため、品質も保証いたします。</p>
                     </div>
                 </div>
-                <div class="job_syousai3 job_syo" id="area-3">
+                <div class="job_syousai4 job_syo" id="area-4">
                     <img src="img/home2.webp" alt="">
                     <div class="job_setumei">
                         <h1>コーチング工事</h1>
                         <p>外壁の継ぎ目を埋める工事です。 コーキング材で劣化した外壁の継ぎ目を埋めることで、雨漏（も）りを防ぐことができます。</p>
                     </div>
                 </div>
-                <div class="job_syousai4 job_syo" id="area-4">
+                <div class="job_syousai5 job_syo" id="area-5">
                     <img src="img/home2.webp" alt="">
                     <div class="job_setumei">
                         <h1>基礎工事</h1>
@@ -102,7 +112,7 @@
             「防水性の向上」「中性化防止」「防藻・防カビ」などの効果があります。また、湿気や結露の対策のために透湿性のある塗料もあります。</p>
                     </div>
                 </div>
-                <div class="job_syousai5 job_syo" id="area-5">
+                <div class="job_syousai6 job_syo" id="area-6">
                     <img src="img/home2.webp" alt="">
                     <div class="job_setumei">
                         <h1>防水工事</h1>
