全体：文字誤り修正、フォントサイズとフォントも多分変えれた？、company:会社概要を最下部に移動、技術開発はカット

--- a/infomation.html
+++ b/infomation.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.4.4/vegas.min.css">
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/load.css">
         <link rel="stylesheet" href="css/infomation.css">
@@ -62,31 +64,7 @@
                 </div>
             </div>
         </div>
-        <div class="company">
-            <div class="company_list">
-                <h1>会社概要</h1>
-                <ul>
-                    <li>
-                        <p><strong> 社名</strong></p><span class="list">株式会社　極美</span>
-                    </li>
-                    <li>
-                        <p><strong> 住所</strong></p><span class="list">千葉県松戸市大町4丁目8-3-2 田中ビル3F</span>
-                    </li>
-                    <li>
-                        <p><strong> 電話番号</strong></p><span class="list">045-3204-1256</span>
-                    </li>
-                    <li>
-                        <p><strong> 代表取締役</strong></p><span class="list">田中　太郎</span>
-                    </li>
-                    <li>
-                        <p><strong> 工事許可登録</strong></p><span class="list">屋根塗装　外装塗装　各種吹付塗装　コーチング工事　防水工事</span>
-                    </li>
-                    <li>
-                        <p><strong> 事業内容 </strong></p><span class="list">屋根塗装　外装塗装　各種吹付塗装　コーチング工事　防水工事</span>
-                    </li>
-                </ul>
-            </div>
-        </div>
+
         <div class="vision" id="vision_id">
             <div class="vision_top visionAnime">
                 <h1>Our vision<span class="br_main">極美のビジョン</span></h1>
@@ -106,7 +84,7 @@
                         <img src="img/home4.webp" alt="">
                     </div>
                 </li>
-                <li class="activity_1 actAnime2">
+                <!-- <li class="activity_1 actAnime2">
                     <div class="phrase">
                         <h2 class="bg_main_2">技術開発</h2>
                         <p>塗料メーカー・塗装機器メーカーとタイアップし、新素材の検証を行い、アドバイスすることでより良い製品開発に協力しています。</p>
@@ -114,19 +92,19 @@
                     <div class="photo">
                         <img src="img/home2.webp" alt="">
                     </div>
-                </li>
-                <li class="activity_1 actAnime1">
+                </li> -->
+                <li class="activity_1 actAnime2">
                     <div class="phrase">
-                        <h2 class="bg_main_3">工事管理<br>リーダーシップ</h2>
+                        <h2 class="bg_main_2">工事管理<br>リーダーシップ</h2>
                         <p>適切な労務、卓越した技術力だけでなく工事現場のリーダーシップをとり、牽引役としての機能を提供します。</p>
                     </div>
                     <div class="photo">
                         <img src="img/home3.webp" alt="">
                     </div>
                 </li>
-                <li class="activity_1 actAnime2">
+                <li class="activity_1 actAnime1">
                     <div class="phrase">
-                        <h2 class="bg_main_4">環境活動</h2>
+                        <h2 class="bg_main_3">環境活動</h2>
                         <p>環境対応型塗料の選定、遮熱工法の推進を積極的に展開し、地球温暖化防止にこころがけています。</p>
                     </div>
                     <div class="photo">
@@ -134,6 +112,32 @@
                     </div>
                 </li>
             </ul>
+        </div>
+
+        <div class="company">
+            <div class="company_list">
+                <h1>会社概要</h1>
+                <ul>
+                    <li>
+                        <p><strong> 社名</strong></p><span class="list">株式会社　極美</span>
+                    </li>
+                    <li>
+                        <p><strong> 住所</strong></p><span class="list">千葉県松戸市大町4丁目8-3-2 田中ビル3F</span>
+                    </li>
+                    <li>
+                        <p><strong> 電話番号</strong></p><span class="list">045-3204-1256</span>
+                    </li>
+                    <li>
+                        <p><strong> 代表取締役</strong></p><span class="list">田中　太郎</span>
+                    </li>
+                    <li>
+                        <p><strong> 工事許可登録</strong></p><span class="list">屋根塗装　外装塗装　各種吹付塗装　コーキング塗装　防水塗装　基礎塗装</span>
+                    </li>
+                    <li>
+                        <p><strong> 事業内容 </strong></p><span class="list">屋根塗装　外装塗装　各種吹付塗装　コーキング工事　防水塗装　基礎塗装</span>
+                    </li>
+                </ul>
+            </div>
         </div>
         <!--  
   <div class="content">
