--- a/jigyou.html
+++ b/jigyou.html
@@ -66,13 +66,13 @@
                     <h1><a href="#area-3">各種吹付塗装</a></h1>
                 </div>
                 <div class="job_content4 job_con">
-                    <h1><a href="#area-4">コーチング工事</a></h1>
+                    <h1><a href="#area-4">コーキング塗装</a></h1>
                 </div>
-                <div class="job_content5 job_con">
-                    <h1><a href="#area-5">基礎工事</a></h1>
+                <div href="#area-5" class="job_content6 job_con">
+                    <h1><a href="#area-5">防水塗装</a></h1>
                 </div>
-                <div href="#area-6" class="job_content6 job_con">
-                    <h1><a href="#area-6">防水工事</a></h1>
+                <div class="job_content6 job_con">
+                    <h1><a href="#area-6">基礎塗装</a></h1>
                 </div>
             </div>
             <div class="jigyou_syousai">
@@ -100,23 +100,23 @@
                 <div class="job_syousai4 job_syo" id="area-4">
                     <img src="img/home2.webp" alt="">
                     <div class="job_setumei">
-                        <h1>コーチング工事</h1>
+                        <h1>コーキング工事</h1>
                         <p>外壁の継ぎ目を埋める工事です。 コーキング材で劣化した外壁の継ぎ目を埋めることで、雨漏（も）りを防ぐことができます。</p>
                     </div>
                 </div>
                 <div class="job_syousai5 job_syo" id="area-5">
                     <img src="img/home2.webp" alt="">
                     <div class="job_setumei">
-                        <h1>基礎工事</h1>
-                        <p>基礎の汚れが気になる、もっと見栄えを良くしたいなどの美観性を意識する場合や経年劣化、中性化の対策をしたいという要望にお答えします。
-            「防水性の向上」「中性化防止」「防藻・防カビ」などの効果があります。また、湿気や結露の対策のために透湿性のある塗料もあります。</p>
+                        <h1>防水塗装</h1>
+                        <p>建物の構造や既存防水層の状態、排水ドレンの確認、躯体調査など問題点を確認して建物に最も適した工法をご提案します。耐久性に優れた防水こそが建物の躯体を雨水から守り、建物の寿命を格段に延ばします。</p>
                     </div>
                 </div>
                 <div class="job_syousai6 job_syo" id="area-6">
                     <img src="img/home2.webp" alt="">
                     <div class="job_setumei">
-                        <h1>防水工事</h1>
-                        <p>建物の構造や既存防水層の状態、排水ドレンの確認、躯体調査など問題点を確認して建物に最も適した工法をご提案します。耐久性に優れた防水こそが建物の躯体を雨水から守り、建物の寿命を格段に延ばします。</p>
+                        <h1>基礎塗装</h1>
+                        <p>基礎の汚れが気になる、もっと見栄えを良くしたいなどの美観性を意識する場合や経年劣化、中性化の対策をしたいという要望にお答えします。
+                            「防水性の向上」「中性化防止」「防藻・防カビ」などの効果があります。また、湿気や結露の対策のために透湿性のある塗料もあります。</p>
                     </div>
                 </div>
             </div>
