--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
                             <div class="img-area">
                             </div>
                         </div>
-                        <h4 class="btn-title">About 01</h4>
                     </div>
                 </div>
             </section>
@@ -102,15 +101,16 @@
                         <p>塗膜の品質を均一にでき、より多くの膜厚をつけやすい工法でもあるので、仕上がりがきれいになります。当社は高い技術力のある職人が在籍しているため、品質も保証いたします。</p>
                     </li>
                     <li><a href="jigyou.html#area-3"><img src="img/home4.webp" alt=""></a>
-                        <h3>コーキング工事</h3>
+                        <h3>コーキング塗装</h3>
                         <p>外壁の継ぎ目を埋める工事です。 コーキング材で劣化した外壁の継ぎ目を埋めることで、雨漏（も）りを防ぐことができます。</p>
                     </li>
                     <li><a href="jigyou.html#area-5"><img src="img/home5.webp" alt=""></a>
-                        <h3>防水工事</h3>
+                        <h3>防水塗装
+                        </h3>
                         <p>建物の構造や既存防水層の状態、排水ドレンの確認、躯体調査など問題点を確認して建物に最も適した工法をご提案します</p>
                     </li>
                     <li><a href="jigyou.html#area-4"><img src="img/home5.webp" alt=""></a>
-                        <h3>基礎工事</h3>
+                        <h3>基礎塗装</h3>
                         <p>基礎の汚れが気になる、もっと見栄えを良くしたいなどの美観性を意識する場合や経年劣化、中性化の対策をしたいという要望にお答えします</p>
                     </li>
                 </ul>
