--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="header-wrapper">
             <header>
                 <div class="header-nav">
-                    <h1 class="header-log"><a href="index.html"></a></h1>
+                    <h1 class="header-log"><a href="index.html"><img src="img/logo.png" alt="logo"></a></h1>
                     <div class="mobile-cover">
                         <div class="mobile-menu">
                             <span></span>
