--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#FFF">
-        <meta name="keywords" content="株式会社極美_ホームページ">
+        <meta name="keywords" content="株式会社極美">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.4.4/vegas.min.css">
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/load.css">
-        <title>株式会社極美_ホームページ</title>
+        <link rel="icon" href="ico/favicon.ico">
+        <title>株式会社極美</title>
     </head>
     <body>
         <div id="loader">
@@ -69,7 +70,7 @@
                         <p class="fadeTarget fade">皆様に安心・快適をご提供させていただきます。
                         お客様がこれまで築かれてきた信頼と安全を守り、
                         その先にある豊かな社会づくりに貢献いたします。</p>
-                        <p calss="btn-cover"><a href="infomation.html" class="btn btn-flat"><span>株式会社極見について</span></a></p>
+                        <p calss="btn-cover"><a href="infomation.html" class="btn btn-flat"><span>株式会社極美について</span></a></p>
                     </div>
                     <div class="img-wrapper">
                         <div class="img-wrap">
