--- a/infomation.html
+++ b/infomation.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/load.css">
         <link rel="stylesheet" href="css/infomation.css">
+        <link rel="icon" href="ico/favicon.ico">
         <title>会社概要</title>
     </head>
     <body>
@@ -21,7 +22,7 @@
         <div class="header-wrapper">
             <header>
                 <div class="header-nav">
-                    <h1 class="header-log"><a href=""></a></h1>
+                    <h1 class="header-log"><a href="index.html"><img src="img/logo.png" alt="logo"></a></h1>
                     <div class="mobile-cover">
                         <div class="mobile-menu">
                             <span></span>
