--- a/jigyou.html
+++ b/jigyou.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/load.css">
         <link rel="stylesheet" href="css/jigyou.css">
-        <title>corporate site</title>
+        <link rel="icon" href="ico/favicon.ico">
+        <title>事業詳細</title>
     </head>
     <body>
         <div id="loader">
@@ -19,7 +20,7 @@
         <div class="header-wrapper">
             <header>
                 <div class="header-nav">
-                    <h1 class="header-log"><a href=""></a></h1>
+                    <h1 class="header-log"><a href="index.html"><img src="img/logo.png" alt="logo"></a></h1>
                     <div class="mobile-cover">
                         <div class="mobile-menu">
                             <span></span>
