画像と文章の更新

--- a/jigyou.html
+++ b/jigyou.html
@@ -78,42 +78,42 @@
             </div>
             <div class="jigyou_syousai">
                 <div class="job_syousai1 job_syo" id="area-1">
-                    <img src="img/home2.webp" alt="">
+                    <img src="img/top/roof.jpg" alt="">
                     <div class="job_setumei">
                         <h1>屋根塗装</h1>
                         <p>遮熱効果が向上する・断熱性が高くなる・防水効果が向上する・抗菌性が高くなる・外観が美しくなる 屋根の塗膜が剥がれていたり、色あせやサビが生じている、ひび割れが起きている場合などに最適な屋根塗装をご提案します。</p>
                     </div>
                 </div>
                 <div class="job_syousai2 job_syo" id="area-2">
-                    <img src="img/home2.webp" alt="">
+                    <img src="img/top/wallpainting.jpg" alt="">
                     <div class="job_setumei">
                         <h1>外壁塗装</h1>
                         <p>遮熱効果が向上する・断熱性が高くなる・防水効果が向上する・抗菌性が高くなる・外観が美しくなる 屋根の塗膜が剥がれていたり、色あせやサビが生じている、ひび割れが起きている場合などに最適な屋根塗装をご提案します。</p>
                     </div>
                 </div>
                 <div class="job_syousai3 job_syo" id="area-3">
-                    <img src="img/home2.webp" alt="">
+                    <img src="img/top/spraying.jpg" alt="">
                     <div class="job_setumei">
                         <h1>各種吹付塗装</h1>
                         <p>塗膜の品質を均一にでき、より多くの膜厚をつけやすい工法でもあるので、仕上がりがきれいになります。当社は高い技術力のある職人が在籍しているため、品質も保証いたします。</p>
                     </div>
                 </div>
                 <div class="job_syousai4 job_syo" id="area-4">
-                    <img src="img/home2.webp" alt="">
+                    <img src="img/top/caulking.jpg" alt="">
                     <div class="job_setumei">
                         <h1>コーキング工事</h1>
                         <p>外壁の継ぎ目を埋める工事です。 コーキング材で劣化した外壁の継ぎ目を埋めることで、雨漏（も）りを防ぐことができます。</p>
                     </div>
                 </div>
                 <div class="job_syousai5 job_syo" id="area-5">
-                    <img src="img/home2.webp" alt="">
+                    <img src="img/top/waterproof.jpg" alt="">
                     <div class="job_setumei">
                         <h1>防水塗装</h1>
                         <p>建物の構造や既存防水層の状態、排水ドレンの確認、躯体調査など問題点を確認して建物に最も適した工法をご提案します。耐久性に優れた防水こそが建物の躯体を雨水から守り、建物の寿命を格段に延ばします。</p>
                     </div>
                 </div>
                 <div class="job_syousai6 job_syo" id="area-6">
-                    <img src="img/home2.webp" alt="">
+                    <img src="img/top/base_work.jpg" alt="">
                     <div class="job_setumei">
                         <h1>基礎塗装</h1>
                         <p>基礎の汚れが気になる、もっと見栄えを良くしたいなどの美観性を意識する場合や経年劣化、中性化の対策をしたいという要望にお答えします。
