外壁塗装の記載変更

--- a/infomation.html
+++ b/infomation.html
@@ -64,7 +64,7 @@
                     その結果、お客様との直接のコミニュケーション不足等によりお客様に満足いただけない事が多くありました。その経験の中で、もっとお客様を安心、満足させてあげたいという想いで株式会社極美を立ち上げました。
                     弊社では、自社施工によりお客様と直接のコミニュケーション、お客様にとって無理のない金額設定、地域密着による迅速な対応等により、弊社の理念である他社と比較してもどこにも負けない「美しさを極めた仕上がり」を実現しました。
                     お客様を裏切るような業者が多い今、そのようなことは一切せず皆プロとして誠心誠意最後まで携わりお客様の笑顔を増やしていきたいと思っておりますので、ぜひお気軽にご相談ください。</p>
-                <div class="pre_img"><img src="" alt="社長の写真">
+                <!-- <div class="pre_img"><img src="" alt="社長の写真"> -->
                     <p>代表取締役　〇〇　〇〇</p>
                 </div>
             </div>
