--- a/jigyou.html
+++ b/jigyou.html
@@ -88,7 +88,8 @@
                     <img src="img/top/wallpainting.jpg" alt="">
                     <div class="job_setumei">
                         <h1>外壁塗装</h1>
-                        <p>遮熱効果が向上する・断熱性が高くなる・防水効果が向上する・抗菌性が高くなる・外観が美しくなる 屋根の塗膜が剥がれていたり、色あせやサビが生じている、ひび割れが起きている場合などに最適な屋根塗装をご提案します。</p>
+                        <p>防水・防カビ、遮熱・断熱、下地補強等様々なメリットがあります。さらに外観を一新させ、住まいの寿命を延ばすことが可能となります。
+                        様々なご要望にお応えします。</p>
                     </div>
                 </div>
                 <div class="job_syousai3 job_syo" id="area-3">
